Test Cases/DISNEY/NEGATIVE_TEST/D4_CX.tc
<?xml version="1.0" encoding="UTF-8"?>
<TestCaseEntity>
   <description></description>
   <name>D4_CX</name>
   <tag></tag>
   <comment></comment>
   <recordOption>OTHER</recordOption>
   <testCaseGuid>08de39fb-c587-4be0-820d-3bdf24fd5781</testCaseGuid>
</TestCaseEntity>
